[tool.poetry]
name = "pybiscus"
version = "0.5.0"
description = "A flexible Federated Learning framework"
authors = ["Baptiste MORISSE <baptiste.morisse@thalesgroup.com>"]
packages = [
    {include = "src"}
]

[tool.poetry.scripts]
pybiscus_app = "src.main:app"

[tool.poetry.dependencies]
python = ">=3.9, < 3.13"
flwr = "^1.8"
numpy = ">=1.24.1,<1.26.0"
typing_extensions = "^4.0"
rich = "^13.6"
typer = {extras = ["all"], version = "^0.9"}  # locked version as flwr 1.8 needs typer 0.9
torch = "^2.0.0"
torchmetrics = "^1.2"
lightning = {extras = ["pytorch-extra"], version = "^2.0.6"}
torchvision = "^0.16.0"
einops = "^0.6.1"
tensorboard = "^2.14.1"
pydantic = "2.6"
trogon = "^0.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "<23.0"
ruff = "^0.3.5"
isort = "^5.12.0"
docformatter = {extras = ["tomli"], version = "^1.7.5"}
pre-commit = "^3.5.0"
bandit = "^1.7.5"
ipython = "<8.23"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.6"

[tool.isort]
profile = "black"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 88
target-version = ["py39"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
