[project]
name = "pybiscus"
version = "0.7.0.dev1"
description = "A flexible Federated Learning framework"
authors = [
    { name = "BaptisteMorisse", email = "bmorisse.pro@proton.me" }
]
dependencies = [
    "flwr>=1.8.0",
    "rich>=13.7.1",
    "lightning>=2.2.4",
    "jsonargparse[signatures,omegaconf]>=4.28.0",
    "omegaconf>=2.3.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "einops>=0.8.0",
    "tensorboard>=2.16.2",
    "pydantic>=2.7.1",
]
readme = "README.md"
license = { file = "LICENSE.md" }

requires-python = ">= 3.9, <3.13"

[project.urls]
Homepage = "https://misterbourbaki.github.io/pybiscus/"
Repository = "https://github.com/MisterBourbaki/pybiscus"

[project.scripts]
# pybiscus_app = "pybiscus.main:app"
pybiscus_server = "pybiscus.commands.app_server:server_cli"
pybiscus_client = "pybiscus.commands.app_client:client_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "pre-commit>=3.7.1",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.1",
    "mkdocs-material>=9.5.23",
    "ipython>=8.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pybiscus"]
